@startuml Objektmodel-Domaene
' =====================================================================
' NFHotel 2.0 — Objektmodel, domænelaget
' Genereret 2026-09-08 ud fra src/NFHotel.Domain/
' =====================================================================
skinparam backgroundColor #FFFFFF
skinparam shadowing false
skinparam defaultFontName "Segoe UI"
skinparam defaultFontSize 11
skinparam roundCorner 6
skinparam nodesep 26
skinparam ranksep 50
skinparam class {
  BackgroundColor #FFFFFF
  BorderColor #2F4739
  ArrowColor #5A615C
  FontColor #1C1F1D
  AttributeFontColor #5A615C
  StereotypeFontColor #8A6A34
}
skinparam package {
  BackgroundColor #FCFBF8
  BorderColor #B08A4F
  FontColor #2F4739
  FontStyle bold
}
skinparam note {
  BackgroundColor #F7F5F0
  BorderColor #DDD9D0
  FontColor #5A615C
}

title Objektmodel — domænelaget

package "NFHotel.Domain" as DOM #FCFBF8 {

  class Booking <<entity>> {
    +BookingId
    +StartDate
    +EndDate
    +CheckOutDate
    +CheckInTime
    +CheckOutTime
    +Status
    +RoomId
    +GuestId
    .. afledt ..
    +Period
    +EffectiveEndDate
    +EffectivePeriod
    +NumberOfNights
    +BookingNumber
    +CanConfirm
    +CanCheckOut
    +CanCancel
    +CanReschedule
    .. livscyklus ..
    {static} +Create(periode, roomId, guestId, iDag)
    +CanCheckIn(iDag)
    +Confirm()
    +CheckIn(tidspunkt, iDag)
    +CheckOut(tidspunkt, udtjekDato, iDag)
    +Cancel()
    +Reschedule(nyPeriode, nytRoomId, iDag)
  }

  class Room <<entity>> {
    +RoomId
    +RoomNumber
    +Floor
    +Size
    +Capacity
    +Status
    +HousekeepingStatus
    .. afledt ..
    +IsBookable
    +CanStartCleaning
    +CanCompleteCleaning
    +CanStartService
    +CanCompleteService
    .. overgange ..
    {static} +Create(nummer, etage, størrelse, kapacitet)
    +UpdateDetails(...)
    +TakeOutOfService()
    +SendToMaintenance()
    +ReturnToService()
    +MarkDailyCleaningDue()
    +MarkDepartureCleaningDue()
    +StartCleaning()
    +CompleteCleaning()
    +ReportServiceNeeded()
    +StartService()
    +CompleteService(rengøres)
  }

  class Guest <<entity>> {
    +GuestId
    +FirstName
    +LastName
    +Email
    +PhoneNumber
    +Country
    +PassportNumber
    +FullName
    {static} +Create(...)
    +UpdateDetails(...)
  }

  class DateRange <<value object>> {
    +Start
    +End
    +Nights
    +Overlaps(anden)
    +Contains(dato)
    +StartsOnOrAfter(iDag)
  }

  class BookingRules <<static>> {
    +Overlaps(a, b)
    +BlocksRoom(status)
    +Conflicts(eksisterende, roomId, periode)
  }
  class GuestRules <<static>>
  class RoomRules <<static>>

  enum BookingStatus
  enum RoomStatus
  enum HousekeepingStatus
  enum RoomSize
}


Guest "1" -- "0..*" Booking
Room  "1" -- "0..*" Booking
Booking ..> DateRange
Booking ..> BookingStatus
Room ..> RoomStatus
Room ..> HousekeepingStatus
Room ..> RoomSize
BookingRules ..> DateRange
BookingRules ..> BookingStatus
GuestRules ..> Guest
RoomRules ..> Room

note bottom of Booking
  **Can*-properties er ikke UI-bekvemmelighed.**
  De er den guard overgangsmetoden selv bruger,
  saa brugerfladen kan tegne knapper efter samme
  regel som domaenet haandhaever.

  **Ingen DateTime.Now.** Alle regler der har brug
  for dagens dato faar den som parameter — derfor
  kan tilstandsmaskinen testes deterministisk.
end note

@enduml
